xd10 small spacing fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,6 +65,6 @@ h6 {
   margin: 0px auto;
 }
 #div_bio {
-    width: 80%;
+    width: 90%;
     margin: 0px auto;
 }
